--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,11 @@
+@charset "UTF-8";
+.container {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 1200px;
+  width: 100%;
+}
+
 .btn {
   width: 100%;
   height: 60px;
@@ -114,4 +122,63 @@
 }
 .icon:hover .black-eye {
   display: none;
+}
+
+.form__search {
+  margin: 40px auto;
+  max-width: 384px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #1A1A1A;
+  padding-bottom: 8px;
+}
+.form__search input {
+  max-width: 364px;
+  width: 100%;
+  padding-right: 10px;
+}
+.form__search input::-webkit-input-placeholder {
+  font-family: "Nunito-Regular";
+  font-size: 16px;
+  line-height: 28px;
+}
+.form__search input::-moz-placeholder {
+  font-family: "Nunito-Regular";
+  font-size: 16px;
+  line-height: 28px;
+}
+.form__search input:-ms-input-placeholder {
+  font-family: "Nunito-Regular";
+  font-size: 16px;
+  line-height: 28px;
+}
+.form__search input::-ms-input-placeholder {
+  font-family: "Nunito-Regular";
+  font-size: 16px;
+  line-height: 28px;
+}
+.form__search input::placeholder {
+  font-family: "Nunito-Regular";
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.breadcrumb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Nunito-Regular";
+  font-size: 14px;
+  line-height: 20px;
+  color: #1A1A1A;
+}
+.breadcrumb li + li:before {
+  padding: 8px;
+  color: black;
+  font-weight: 600;
+  content: "/ ";
+}
+.breadcrumb li:last-child {
+  color: #828282;
 }
