--- a/css/reset.css
+++ b/css/reset.css
@@ -63,10 +63,15 @@ img {
 button {
   border-style: none;
   padding: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 input {
   padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
 }
 
 a {
