--- a/app/scss/fonts.scss
+++ b/app/scss/fonts.scss
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: 'Nunito-Light';
+  src: url('../fonts/Nunito-Light.woff2') format('woff2'),
+       url('../fonts/Nunito-Light.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
   font-family: 'Nunito-Regular';
   src: url('../fonts/Nunito-Regular.woff2') format('woff2'),
        url('../fonts/Nunito-Regular.woff') format('woff');
@@ -9,6 +16,13 @@
   font-family: 'Nunito-SemiBold';
   src: url('../fonts/Nunito-SemiBold.woff2') format('woff2'),
        url('../fonts/Nunito-SemiBold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SilkSerif-Regular';
+  src: url('../fonts/SilkSerif-Regular.woff2') format('woff2'),
+       url('../fonts/SilkSerif-Regular.woff') format('woff');
   font-display: swap;
 }
 
