--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -128,6 +128,7 @@
     max-width: 364px;
     width: 100%;
     padding-right: 10px;
+    background-color: transparent;
     &::placeholder{
       font-family: 'Nunito-Regular';
       font-size: 16px;
@@ -149,5 +150,42 @@
   }
   li:last-child{
     color: #828282;
+  }
+}
+
+.card{
+  max-width: 280px;
+  width: 100%;
+  &__img{
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
+    background: #FCF9F4;
+    padding: 74px 40px;
+  }
+  &__info{
+    padding: 16px 0;
+    font-family: 'Nunito-SemiBold';
+    color: #1A1A1A;
+    div:not(:first-child){
+      margin-top: 4px;
+    }
+    &-name{
+      font-size: 14px;
+      line-height: 20px;
+      color: #1A1A1A;
+    }
+    &-category{
+      font-family: 'Nunito-Regular';
+      font-size: 12px;
+      line-height: 16px;
+    }
+    &-stock{
+      font-size: 12px;
+      line-height: 16px;
+      color: #569587;
+    }
+    &__price{
+      font-size: 14px;
+      line-height: 20px;
+    }
   }
 }
