--- a/css/global.css
+++ b/css/global.css
@@ -137,6 +137,7 @@
   max-width: 364px;
   width: 100%;
   padding-right: 10px;
+  background-color: transparent;
 }
 .form__search input::-webkit-input-placeholder {
   font-family: "Nunito-Regular";
@@ -181,4 +182,42 @@
 }
 .breadcrumb li:last-child {
   color: #828282;
+}
+
+.card {
+  max-width: 280px;
+  width: 100%;
+}
+.card__img {
+  -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
+          box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
+  background: #FCF9F4;
+  padding: 74px 40px;
+}
+.card__info {
+  padding: 16px 0;
+  font-family: "Nunito-SemiBold";
+  color: #1A1A1A;
+}
+.card__info div:not(:first-child) {
+  margin-top: 4px;
+}
+.card__info-name {
+  font-size: 14px;
+  line-height: 20px;
+  color: #1A1A1A;
+}
+.card__info-category {
+  font-family: "Nunito-Regular";
+  font-size: 12px;
+  line-height: 16px;
+}
+.card__info-stock {
+  font-size: 12px;
+  line-height: 16px;
+  color: #569587;
+}
+.card__info__price {
+  font-size: 14px;
+  line-height: 20px;
 }
