--- a/app/scss/gifts-cards.scss
+++ b/app/scss/gifts-cards.scss
@@ -4,9 +4,7 @@
     margin-bottom: 24px;
     background-color: #FCF9F4;
     &-info{
-      margin: 0 auto;
       padding: 0 20px;
-      max-width: 1200px;
       width: 100%;
       padding-top: 24px;
       padding-bottom: 20px;
@@ -31,6 +29,8 @@
       }
     }
     &-img{
+      max-width: 592px;
+      width: 100%;
       img{
         width: 100%;
         height: 100%;
@@ -86,16 +86,34 @@
         font-size: 16px;
         line-height: 28px;
       }
+      &-img{
+        width: 60%;
+      }
     }
   }
 }
 
 @media (min-width: 1190px) {
-  .giftscards__wrapper{
-    justify-content: space-between;
-    .card{
-      margin: 0;
+  .giftscards{
+    &__wrapper{
+      justify-content: space-between;
+      .card{
+        margin: 0;
+      }
     }
   }
 }
 
+@media (min-width: 1200px) {
+  .giftscards{
+    &__banner{
+      &-info{
+        margin-left: calc((100vw - 1160px) / 2);
+        padding-left: 0;
+      }
+      &-img{
+        margin-right: calc((100vw - 1160px) / 2);
+      }
+    }
+  }
+}
