--- a/app/scss/gifts-cards.scss
+++ b/app/scss/gifts-cards.scss
@@ -19,6 +19,7 @@
           font-size: 14px;
           line-height: 20px;
           color: #828282;
+          bottom: 0;
         }
       }
       &__text{
@@ -29,11 +30,10 @@
       }
     }
     &-img{
-      max-width: 592px;
       width: 100%;
       img{
         width: 100%;
-        height: 100%;
+        min-height: 312px;
         object-fit: cover;
       }
     }
@@ -43,17 +43,35 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 32px;
+    .card{
+      width: 48%;
+      &:nth-child(2n){
+        margin-left: 10px;
+      }
+      &__img{
+        img{
+          padding: 20px;
+        }
+      }
+    }
   }
 }
 
 @media (min-width: 600px) {
   .giftscards{
     &__banner{
-       display: flex;}
+       display: flex;
+       &-img{
+         height: 100%;
+       }
+    }
     &__wrapper{
-      margin-top: 60px;
-      .card:nth-child(2n){
-        margin-left: 10px;
+      .card{
+        &__img{
+          img{
+            padding: 74px 40px;
+          }
+        }
       }
     }
   }
@@ -74,11 +92,16 @@
       &-info__title{
         font-size: 56px;
         line-height: 76px;
+        position: relative;
+        display: inline-block;
         sup{
           font-family: 'Nunito-SemiBold';
           font-size: 16px;
           line-height: 24px;
           color: #828282;
+          position: absolute;
+          top: 5px;
+          right: -20px;
         }
       }
       &-info__text{
@@ -112,8 +135,19 @@
         padding-left: 0;
       }
       &-img{
-        margin-right: calc((100vw - 1180px) / 2);
+        width: 80%;
       }
     }
   }
 }
+
+@media (min-width: 1440px) {
+  .giftscards{
+    &__banner{
+      &-img{
+        margin-right: calc(((100vw - 1180px) / 2) - 120px);
+      }
+    }
+  }
+}
+
