--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -159,7 +159,9 @@
   &__img{
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     background: #FCF9F4;
-    padding: 74px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &__info{
     padding: 16px 0;
