--- a/css/global.css
+++ b/css/global.css
@@ -192,7 +192,15 @@
   -webkit-box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
           box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
   background: #FCF9F4;
-  padding: 74px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .card__info {
   padding: 16px 0;
