--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -218,3 +218,78 @@
     }
   }
 }
+
+.banner{
+  margin-bottom: 24px;
+  background-color: #FCF9F4;
+  &-info{
+    padding: 0 20px;
+    width: 100%;
+    padding-top: 24px;
+    padding-bottom: 20px;
+    &__title{
+      margin-bottom: 8px;
+      font-size: 25px;
+      line-height: 36px;
+      @media (min-width: 890px) {
+        font-size: 56px;
+        line-height: 76px;
+        position: relative;
+        display: inline-block;
+      }
+      sup{
+        line-height: 20px;
+        font-size: 14px;
+        @media (min-width: 890px) {
+          font-family: 'Nunito-SemiBold';
+          font-size: 16px;
+          line-height: 24px;
+          color: #828282;
+          position: absolute;
+          top: 5px;
+          right: -20px;
+        }
+      }
+    }
+    &__text{
+      font-family: 'Nunito-Regular';
+      font-size: 14px;
+      line-height: 20px;
+      color: #828282;
+      @media (min-width: 890px) {
+        max-width: 468px;
+        font-size: 16px;
+        line-height: 28px;
+      }
+    }
+    @media (min-width: 890px) {
+      padding-top: 54px;
+      padding-bottom: 54px;
+    }
+    @media (min-width: 1200px) {
+      margin-left: calc((100vw - 1180px) / 2);
+      padding-left: 0;
+    }
+  }
+  &-img{
+    width: 100%;
+    
+    img{
+      width: 100%;
+      min-height: 312px;
+      object-fit: cover;
+    }
+    @media (min-width: 890px) {
+      width: 60%;
+    }
+    @media (min-width: 1200px) {
+      width: 80%;
+    }
+    @media (min-width: 1440px) {
+      margin-right: calc(((100vw - 1180px) / 2) - 120px);
+    }
+  }
+  @media (min-width: 600px) {
+    display: flex;
+  }
+}
