--- a/app/scss/blog.scss
+++ b/app/scss/blog.scss
@@ -191,6 +191,12 @@ span.active__blog-tab{
         max-width: calc((100% - 40px) / 2);
         row-gap: 52px;
       }
+      &-name{
+        min-height: 72px;
+      }
+      &-description{
+        min-height: 62px;
+      }
     }
   }
 }
