--- a/app/scss/blog-post.scss
+++ b/app/scss/blog-post.scss
@@ -145,9 +145,6 @@ div.swiper-pagination-progressbar.swiper-pagination-horizontal{
 
 @media (min-width: 800px) {
   .blogpost{
-    &__recommend{
-      display: block;
-    }
     .blog__post{
       &-main{
         display: flex;
@@ -160,15 +157,16 @@ div.swiper-pagination-progressbar.swiper-pagination-horizontal{
       display: flex;
       column-gap: 32px;
     }
-    .swiper{
-      display: none;
-    }
+    // .swiper{
+    //   display: none;
+    // }
   }
 }
 
 @media (min-width: 1024px) {
   .blogpost{
     &__recommend{
+      display: block;
       margin-top: 345px;
     }
     .card{
@@ -182,6 +180,9 @@ div.swiper-pagination-progressbar.swiper-pagination-horizontal{
       font-size: 16px;
       line-height: 28px;
       margin: 24px 0;
+    }
+    .swiper{
+      display: none;
     }
   }
 }
