--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -7,7 +7,7 @@
 
 .btn{
   width: 100%;
-  height: 60px;
+  height: 44px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
 }
 
@@ -46,17 +46,18 @@
   margin-top: 4px;
   border-style: none;
   border: 1.5px solid #C4C4C4;
-  height: 52px;
+  height: 40px;
   width: 100%;
   padding: 12px;
 }
 
 .label{
+  font-family: 'Nunito-SemiBold';
   color: #1A1A1A;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 14px;
+  line-height: 20px;
   display: block;
+  width: 100%;
 }
 
 .overlay{
