--- a/css/order.css
+++ b/css/order.css
@@ -29,7 +29,7 @@
 }
 .order__tabs-item {
   border: 1px solid #C4C4C4;
-  padding: 16px 0 16px 16px;
+  padding: 16px 16px 16px 16px;
   min-width: 236px;
 }
 .order__tabs-item__name {
@@ -73,6 +73,7 @@
 .order__btn {
   margin-top: 32px;
   max-width: 696px;
+  margin-bottom: 32px;
 }
 .order__btn-back__desktop {
   display: -webkit-box;
@@ -108,23 +109,24 @@
   margin-bottom: 32px;
   max-height: 180px;
   overflow-y: scroll;
-  margin-right: -22px;
+  margin-right: -14px;
+  padding-right: 10px;
   max-width: 696px;
 }
 .order__form::-webkit-scrollbar {
-  width: 22px;
+  width: 4px;
 }
 .order__form::-webkit-scrollbar-thumb {
   -webkit-box-shadow: inset 0 0 0 1px #828282;
           box-shadow: inset 0 0 0 1px #828282;
-  border: solid 10px transparent;
-  border-radius: 22px;
+  border: solid 1px transparent;
+  border-radius: 4px;
 }
 .order__form::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 0 1px #E0E0E0;
           box-shadow: inset 0 0 0 1px #E0E0E0;
-  border: solid 10px transparent;
-  border-radius: 22px;
+  border: solid 1px transparent;
+  border-radius: 4px;
 }
 .order__form-wrapper {
   display: -webkit-box;
@@ -154,11 +156,180 @@
 .order input {
   margin-bottom: 16px;
 }
+.order__payment .order__form {
+  overflow: visible;
+  max-width: 384px;
+}
+.order__payment .order__btn-continue span:nth-child(2) {
+  display: none;
+}
+.order__payment-inner {
+  font-family: "Nunito-Regular";
+  font-size: 14px;
+  line-height: 20px;
+  color: #1A1A1A;
+  max-width: 472px;
+}
+.order__payment-banks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 16px;
+}
+.order__payment-banks label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 12px;
+  line-height: 16px;
+}
+.order__payment-banks input {
+  margin-right: 12px;
+  margin-bottom: 0;
+}
+.order__payment-banks input[type=radio] {
+  width: 16px;
+  height: 16px;
+  border: 1.5px solid #CCCCCC;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 50%;
+}
+.order__payment-banks input[type=radio]:checked {
+  width: 16px;
+  height: 16px;
+  border: none;
+  background-color: rgba(86, 149, 135, 0.9);
+  position: relative;
+}
+.order__payment-banks input[type=radio]:checked::after {
+  position: absolute;
+  content: url("../images/check.svg");
+}
+.order__status-wrapper {
+  text-align: center;
+  max-width: 417px;
+  margin: 0 auto;
+  margin-top: 72px;
+  margin-bottom: 118px;
+}
+.order__status-img {
+  margin: 0 auto;
+}
+.order__status-title {
+  font-family: "SilkSerif-Italic";
+  font-size: 25px;
+  line-height: 36px;
+  color: #1A1A1A;
+  margin-top: 12px;
+  margin-bottom: 16px;
+}
+.order__status-number {
+  font-family: "Nunito-SemiBold";
+  font-size: 16px;
+  line-height: 24px;
+  color: #1A1A1A;
+}
+.order__status-text {
+  font-family: "Nunito-Regular";
+  font-size: 14px;
+  line-height: 20px;
+  color: #1A1A1A;
+}
+.order__status p:nth-child(4) {
+  margin-top: 12px;
+  margin-bottom: 16px;
+}
+.order__status .order__btn {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 100%;
+}
+
+.order__content {
+  display: none;
+}
+
+.cvv-info {
+  position: relative;
+}
+.cvv-info::after {
+  position: absolute;
+  content: url("../images/CVV-info.svg");
+  right: 32px;
+  top: 0;
+}
 
 .active__order-tab {
   border: 1.5px solid #569587;
 }
 
+@media (min-width: 384px) {
+  .order__payment .order__form-wrapper label:nth-child(2) {
+    max-width: 120px;
+  }
+  .order__payment .order__form-wrapper label:nth-child(2)::after {
+    right: 0;
+  }
+}
+@media (min-width: 415px) {
+  .order__status-wrapper {
+    margin-top: 60px;
+    margin-bottom: 20px;
+  }
+  .order__status-img {
+    width: 80px;
+    height: 80px;
+  }
+  .order__status-title {
+    font-size: 40px;
+    line-height: 62px;
+    margin-top: 20px;
+    margin-bottom: 28px;
+  }
+  .order__status-number {
+    font-size: 20px;
+    line-height: 28px;
+  }
+  .order__status-text {
+    font-size: 16px;
+    line-height: 28px;
+  }
+  .order__status p:nth-child(4) {
+    margin-top: 12px;
+    margin-bottom: 100px;
+  }
+  .order__status p:nth-child(5) {
+    font-family: "Nunito-SemiBold";
+    font-size: 14px;
+    line-height: 20px;
+  }
+  .order__status .order__btn {
+    max-width: 275px;
+    margin: 0 auto;
+    margin-bottom: 86px;
+  }
+  .order__status .order__btn-continue {
+    max-width: 100%;
+  }
+  .order__status .order__btn-back__mobile {
+    display: block;
+    text-transform: none;
+  }
+}
 @media (min-width: 600px) {
   .order input {
     margin-bottom: 20px;
@@ -166,9 +337,6 @@
   .order__title {
     font-size: 40px;
     line-height: 62px;
-  }
-  .order__form {
-    max-width: 592px;
   }
   .order__form input {
     height: 48px;
@@ -184,10 +352,40 @@
   .order__details-form {
     max-width: 592px;
   }
+  .order__payment-inner {
+    font-size: 16px;
+    line-height: 28px;
+  }
+  .order__payment-banks input {
+    margin-bottom: 0;
+  }
+  .order__payment-banks input[type=radio] {
+    width: 20px;
+    height: 20px;
+    border: 1.5px solid #CCCCCC;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    border-radius: 50%;
+  }
+  .order__payment-banks input[type=radio]:checked {
+    width: 20px;
+    height: 20px;
+    border: none;
+    background-color: rgba(86, 149, 135, 0.9);
+    position: relative;
+  }
+  .order__payment-banks input[type=radio]:checked::after {
+    position: absolute;
+    content: url("../images/check2.svg");
+    top: 1px;
+    left: 1px;
+  }
 }
 @media (min-width: 720px) {
   .order__tabs-item {
     min-width: 220px;
+    padding: 20px;
   }
   .order__btn {
     margin-bottom: 50px;
@@ -213,6 +411,18 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+  .order__form {
+    padding-right: 100px;
+  }
+  .order__payment .order__form {
+    padding-right: 0;
+  }
+  .order__payment .order__btn-continue span:nth-child(1) {
+    display: none;
+  }
+  .order__payment .order__btn-continue span:nth-child(2) {
+    display: inline;
   }
 }
 @media (min-width: 1024px) {
@@ -248,5 +458,14 @@
   }
   .order__details-text {
     max-width: 284px;
+  }
+  .order__details .order__tabs {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .order__details .order__tabs-item {
+    max-width: 280px;
+    width: 100%;
   }
 }
